--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,10 +23,23 @@
   box-shadow: 0 1px 2px rgba(0,0,0,.15);
 }
 
-.left{
+.left {
 	float:left;
 }
 
-.right{
+.right {
 	float:right;
+}
+
+.clear {
+	clear:both;
+}
+
+.brand:hover {
+	background:none;
+	color: black !important; 
+}
+
+.nav-list > li > a:hover {
+	color:black;
 }
