Migrate de ordem e produto

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,9 @@
 							<div class="row-fluid">
 								<ul class="nav nav-list">
 									<li class="nav-header">MENU</li>
-									<li><a href="#">Home</a></li>
-									<li><a href="#">Library</a></li>
+									<li><a href="/ordems/new">Ordem de Serviço</a></li>
+									<li><a href="/produtos/new">Produto</a></li>
+									<li><a href="/clientes/new">Cliente</a></li>
 								</ul>
 							</div>
 						</div>
