--- a/app/views/clientes/edit.html.erb
+++ b/app/views/clientes/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing cliente</h1>
+<h1>Editando cliente</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @cliente %> |
-<%= link_to 'Back', clientes_path %>
+<%= link_to 'Mostrar', @cliente %> |
+<%= link_to 'Voltar', clientes_path %>
