--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,5 @@
 <%= link_to "Stampgraff", root_path, :class => 'brand' %>
-<ul class="nav">
+<ul class="nav nav-top">
   <% if user_signed_in? %>
     <li>
     <%= link_to('Logout', destroy_user_session_path, :method=>'delete') %>
