Algumas mudanças recentes

--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -36,4 +36,4 @@
 
 <br />
 
-<%= link_to 'Novo Cliente', new_cliente_path %>
+<%= link_to 'Novo Cliente', new_cliente_path, :class => 'btn btn-primary' %>
