--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,9 +24,11 @@
 							<div class="row-fluid">
 								<ul class="nav nav-list">
 									<li class="nav-header">MENU</li>
-									<li><a href="/ordems/new">Ordem de Serviço</a></li>
-									<li><a href="/produtos/new">Produto</a></li>
-									<li><a href="/clientes/new">Cliente</a></li>
+									<li><a href="/ordems">Ordem de Serviço</a></li>
+									<li><a href="/produtos">Produto</a></li>
+									<li><a href="/clientes">Cliente</a></li>
+									<li><a href="/papels">Papel</a></li>
+									<li><a href="/maquinas">Maquinas</a></li>
 								</ul>
 							</div>
 						</div>
