--- a/app/views/maquinas/index.html.erb
+++ b/app/views/maquinas/index.html.erb
@@ -20,4 +20,4 @@
 
 <br />
 
-<%= link_to 'New Maquina', new_maquina_path %>
+<%= link_to 'Nova Maquina', new_maquina_path, :class => 'btn btn-primary' %>
