--- a/app/views/ordems/show.html.erb
+++ b/app/views/ordems/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <b>Cliente:</b>
-  <%= @ordem.cliente %>
+  <%= @ordem.cliente_id %>
 </p>
 
 <p>
   <b>Usuário:</b>
-  <%= @ordem.user %>
+  <%= @ordem.user.name %>
 </p>
 
 <p>
