--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Sign up</h2>
+<h2>Criar Usuário</h2>
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-vertical' }) do |f| %>
   <%= f.error_notification %>
   <%= display_base_errors resource %>
@@ -6,7 +6,9 @@
   <%= f.input :email, :required => true %>
   <%= f.input :password, :required => true %>
   <%= f.input :password_confirmation, :required => true %>
-  <%= f.button :submit, 'Sign up', :class => 'btn-primary' %>
+	<%= f.input :admin, as: :boolean, :required => true, :label => false %>
+	<%= f.label :admin %>
+  <%= f.button :submit, 'Criar Usuário', :class => 'btn-primary' %>
 <% end %>
 <%= render "devise/shared/links" %>
 
