--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -20,4 +20,4 @@
 
 <br />
 
-<%= link_to 'Novo Produto', new_produto_path %>
+<%= link_to 'Novo Produto', new_produto_path, :class => 'btn btn-primary' %>
