OS separado em 2 models

--- a/app/views/ordems/_form.html.erb
+++ b/app/views/ordems/_form.html.erb
@@ -5,12 +5,9 @@
 		<%= f.label :cliente_id %>
 		<%= f.autocomplete_field :cliente_id, autocomplete_cliente_name_ordems_path %>		  
     <%= f.hidden_field :user_id, value: current_user.id %>
-    <%= f.association :produto, prompt: "Escolha o produto" %>
-		<%= f.association :papel, label_method: :tipo, value_method: :id, prompt: "Escolha o papel" %>
-		<%= f.association :maquina, label_method: :tipo, value_method: :id, prompt: "Escolha a máquina"  %>
-    <%= f.input :valor %>
-    <%= f.input :observacao %>
-    <%= f.input :status %>
+		<%# f.association :papel, label_method: :tipo, value_method: :id, prompt: "Escolha o papel" %>
+		<%# f.association :maquina, label_method: :tipo, value_method: :id, prompt: "Escolha a máquina"  %>
+    <%# f.input :status %>
   </div>
 
   <div class="form-actions">
