--- a/app/views/maquinas/edit.html.erb
+++ b/app/views/maquinas/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing maquina</h1>
-
+<div class="inner_content">
+	<h1 class="page-header">Editando máquina</h1>
+</div>
 <%= render 'form' %>
-
-<%= link_to 'Show', @maquina %> |
-<%= link_to 'Back', maquinas_path %>
