--- a/app/views/ordems/_form.html.erb
+++ b/app/views/ordems/_form.html.erb
@@ -1,16 +1,20 @@
-<%= simple_form_for(@ordem) do |f| %>
-  <%= f.error_notification %>
+<div class="inner_content">
+	<%= simple_form_for(@ordem) do |f| %>
+	  <%= f.error_notification %>
 
-  <div class="form-inputs">
-		<%= f.label :cliente_id %>
-		<%= f.autocomplete_field :cliente_id, autocomplete_cliente_name_ordems_path %>		  
-    <%= f.hidden_field :user_id, value: current_user.id %>
-		<%# f.association :papel, label_method: :tipo, value_method: :id, prompt: "Escolha o papel" %>
-		<%# f.association :maquina, label_method: :tipo, value_method: :id, prompt: "Escolha a máquina"  %>
-    <%# f.input :status %>
-  </div>
+	  <div class="form-inputs">
+			<%= f.label :cliente_id %>
+			<%= f.autocomplete_field :cliente_id, autocomplete_cliente_name_ordems_path %>		  
+	    <%= f.hidden_field :user_id, value: current_user.id %>
+			<%# f.association :papel, label_method: :tipo, value_method: :id, prompt: "Escolha o papel" %>
+			<%# f.association :maquina, label_method: :tipo, value_method: :id, prompt: "Escolha a máquina"  %>
+	    <%# f.input :status %>
+	  </div>
+</div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
-<% end %>
+	  <div class="form-actions">
+	    <%= f.button :submit, "Criar Ordem de Serviço", :class => "btn-primary" %>
+	    <%= link_to 'Voltar', ordems_path, :class=>"btn" %>
+	  </div>
+	<% end %>
+
