--- a/app/views/papels/new.html.erb
+++ b/app/views/papels/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New papel</h1>
-
+<div class="inner_content">
+<h1 class="page-header">Novo papel</h1>
+</div>
 <%= render 'form' %>
-
-<%= link_to 'Back', papels_path %>
