--- a/app/views/produtos/edit.html.erb
+++ b/app/views/produtos/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing produto</h1>
-
+<div class="inner_content">
+<h1  class="page-header">Editando produto</h1>
+</div>
 <%= render 'form' %>
-
-<%= link_to 'Mostrar', @produto %> |
-<%= link_to 'Voltar', produtos_path %>
