--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -1,23 +1,30 @@
-<h1>Listing produtos</h1>
+<div class="inner_content">
+<h1 class="page-header">Listing produtos</h1>
 
-<table>
+<table class="table table-striped">
+  <thead>
   <tr>
     <th>Nome</th>
     <th></th>
     <th></th>
     <th></th>
   </tr>
-
-<% @produtos.each do |produto| %>
-  <tr>
-    <td><%= produto.name %></td>
-    <td><%= link_to 'Mostrar', produto %></td>
-    <td><%= link_to 'Editar', edit_produto_path(produto) %></td>
-    <td><%= link_to 'Deletar', produto, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+  </thead>
+  <tbody>
+	<% @produtos.each do |produto| %>
+	  <tr>
+		<td><%= produto.name %></td>
+		<td><%= link_to 'Mostrar', produto %></td>
+		<td><%= link_to 'Editar', edit_produto_path(produto) %></td>
+		<td><%= link_to 'Deletar', produto, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	  </tr>
+	<% end %>
+  </tbody>
 </table>
 
 <br />
+</div>
+<div class="form-actions">
+	<%= link_to 'Novo Produto', new_produto_path, :class => 'btn btn-primary' %>
+</div>
 
-<%= link_to 'Novo Produto', new_produto_path, :class => 'btn btn-primary' %>
