--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,7 +15,6 @@
 
 .content {
   background-color: #eee;
-  padding: 20px;
   margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
   -webkit-border-radius: 0 0 6px 6px;
   -moz-border-radius: 0 0 6px 6px;
@@ -23,6 +22,10 @@
   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
   -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
   box-shadow: 0 1px 2px rgba(0,0,0,.15);
+}
+
+.inner_content{
+  padding: 10px 20px;
 }
 
 .left {
@@ -44,4 +47,26 @@
 
 .nav-list > li > a:hover {
 	color:black;
+}
+
+.edit_column {
+	width: 62px;
+}
+
+.remove_column{
+	width: 34px;
+}
+
+.edit_column .btn, .remove_column .btn{
+	padding: 0px 10px;
+}
+
+.page-header{
+	margin: 10px 0 20px !important;
+	border-bottom: 1px solid #ccc !important; 
+}
+
+.page-header.secondary{
+	margin: 20px 0 20px !important;
+	font-size: 22px !important; 
 }
