--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -7,3 +7,7 @@ body { padding-top: 60px; }
 }
 
 .btn-primary { color: white !important; }
+
+form {margin: 0px;}
+
+.form-actions{margin-bottom: 0px;}
