--- a/app/assets/stylesheets/clientes.css.scss
+++ b/app/assets/stylesheets/clientes.css.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Clientes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.new_client_form input {
+	width: 95%;
+}
+
+.new_client_form select {
+	width: 32%;
+}
