--- a/app/views/clientes/edit.html.erb
+++ b/app/views/clientes/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editando cliente</h1>
+<div class="inner_content">
+<h1  class="page-header">Editando cliente</h1>
+</div>
 
 <%= render 'form' %>
 
-<%= link_to 'Mostrar', @cliente %> |
-<%= link_to 'Voltar', clientes_path %>
