--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,12 +34,12 @@
 						</div>
 					<%end%>
 					<% if user_signed_in? %>
-						<div class="content span10">
+						<div class="span10">
 					<%else%>
-						<div class="content span12">
+						<div class="span12">
 					<%end%>
-						<div>
-							 <%= render 'layouts/messages' %>
+						<%= render 'layouts/messages' %>
+						<div class="content">
 							 <%= yield %>
 						</div>
 						<footer>
