--- a/app/views/maquinas/index.html.erb
+++ b/app/views/maquinas/index.html.erb
@@ -1,23 +1,31 @@
-<h1>Listing maquinas</h1>
+<div class="inner_content">
+	<h1 class="page-header">Listando maquinas</h1>
 
-<table>
-  <tr>
-    <th>Tipo</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+	<table class="table table-striped">
+      <thead>
+	  <tr>
+	    <th>Tipo</th>
+	    <th></th>
+	    <th></th>
+	    <th></th>
+	  </tr>
+	  </thead>
+	  <tbody>
+		<% @maquinas.each do |maquina| %>
+		  <tr>
+			<td><%= maquina.tipo %></td>
+			<td><%= link_to 'Show', maquina %></td>
+			<td><%= link_to 'Edit', edit_maquina_path(maquina) %></td>
+			<td><%= link_to 'Destroy', maquina, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+		  </tr>
+		<% end %>
+	  </tbody>
+	</table>
 
-<% @maquinas.each do |maquina| %>
-  <tr>
-    <td><%= maquina.tipo %></td>
-    <td><%= link_to 'Show', maquina %></td>
-    <td><%= link_to 'Edit', edit_maquina_path(maquina) %></td>
-    <td><%= link_to 'Destroy', maquina, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+</div>
 
-<br />
+<div class="form-actions">
+    <%= link_to 'Nova Maquina', new_maquina_path, :class => 'btn btn-primary' %>
+</div>
 
-<%= link_to 'Nova Maquina', new_maquina_path, :class => 'btn btn-primary' %>
+
