--- a/app/views/maquinas/new.html.erb
+++ b/app/views/maquinas/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New maquina</h1>
-
+<div class="inner_content">
+<h1 class="page-header">Nova máquina</h1>
+</div>
 <%= render 'form' %>
-
-<%= link_to 'Back', maquinas_path %>
