--- a/app/views/ordems/new.html.erb
+++ b/app/views/ordems/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Nova ordem</h1>
+<div class="inner_content">
+	<h1>Nova ordem</h1>
+</div>
+	<%= render 'form' %>
 
-<%= render 'form' %>
-
-<%= link_to 'Voltar', ordems_path %>
