--- a/app/views/papels/_form.html.erb
+++ b/app/views/papels/_form.html.erb
@@ -1,11 +1,13 @@
+<div class="inner_content">
 <%= simple_form_for(@papel) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
     <%= f.input :tipo %>
   </div>
-
+</div>
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, :class => "btn-primary"  %>
+	<%= link_to 'Voltar', papels_path, :class => "btn" %>
   </div>
 <% end %>
