--- a/app/views/papels/edit.html.erb
+++ b/app/views/papels/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing papel</h1>
-
+<div class="inner_content">
+	<h1 class="page-header">Editando papel</h1>
+</div>
 <%= render 'form' %>
-
-<%= link_to 'Show', @papel %> |
-<%= link_to 'Back', papels_path %>
