--- a/app/views/papels/show.html.erb
+++ b/app/views/papels/show.html.erb
@@ -1,10 +1,13 @@
-<p id="notice"><%= notice %></p>
+<div class="inner_content">
+	<h1  class="page-header">Detalhes do papel</h1>
 
 <p>
   <b>Tipo:</b>
   <%= @papel.tipo %>
 </p>
+</div>
 
-
-<%= link_to 'Edit', edit_papel_path(@papel) %> |
-<%= link_to 'Back', papels_path %>
+<div class="form-actions">
+  <%= link_to 'Editar', edit_papel_path(@papel), :class => "btn btn-primary" %>
+  <%= link_to 'Voltar', papels_path, :class => "btn" %>
+</div>
