--- a/app/views/produtos/_form.html.erb
+++ b/app/views/produtos/_form.html.erb
@@ -1,11 +1,13 @@
+<div class="inner_content">
 <%= simple_form_for(@produto) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :name %>
+    <%= f.input :name, :label => "Nome:" %>
   </div>
-
+</div>
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, "Criar Produto", :class => "btn-primary" %>
+    <%= link_to 'Voltar', produtos_path, :class => "btn" %>
   </div>
 <% end %>
