--- a/app/views/produtos/new.html.erb
+++ b/app/views/produtos/new.html.erb
@@ -1,5 +1,4 @@
-<h1>Novo produto</h1>
-
+<div class="inner_content">
+<h1  class="page-header">Novo produto</h1>
+</div>
 <%= render 'form' %>
-
-<%= link_to 'Voltar', produtos_path %>
