--- a/app/views/servicos/new.html.erb
+++ b/app/views/servicos/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New servico</h1>
+<h1>Novo Serviço</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', servicos_path %>
+<%= link_to 'Voltar', servicos_path %>
