--- a/app/views/ordems/versao_cliente.html.erb
+++ b/app/views/ordems/versao_cliente.html.erb
@@ -31,3 +31,5 @@
   <b>Forma de pagamento:</b>
   <%# @servico.forma_pagamento %>
 </p>
+
+<form><input type="button" value=" Print this page " onclick="window.print();return false;" /></form>
