--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -6,18 +6,19 @@
 	<div class="row">
 		<div class="span3" >
 			<%= f.input :name %>
+			<%= f.input :contato %>
 			<%= f.input :rg %>
 			<%= f.input :nascimento %>
 		</div>
 		<div class="span3" >
-			<%= f.input :telefone1 %>
-			<%= f.input :telefone2 %>
+			<%= f.input :telefone %>
 			<%= f.input :celular %>
+			<%= f.input :celular2 %>
 		</div>
 		<div class="span3" >
 			<%= f.input :endereco %>
-			<%= f.input :email %>
-			<%= f.input :status %>
+			<%= f.input :email_pessoal %>
+			<%= f.input :email_empresa %>
 		</div>
 		
 		
