--- a/app/views/ordems/show.html.erb
+++ b/app/views/ordems/show.html.erb
@@ -75,6 +75,7 @@
 			<div class="span3" >
 				<%= f.association :maquina, label_method: :tipo, value_method: :id, prompt: "Escolha a máquina", :label => "Máquina:", input_html: { class: 'ordem_input' } %>
 				<%= f.input :valor, :as => :string, :label => "Valor (R$):", input_html: { class: 'ordem_input' } %>		
+				<%= f.input :quantidade, :as => :string, :label => "Quantidade:", input_html: { class: 'ordem_input' } %>		
 			</div>
 			<div class="span3" >
 			<%= f.input :observacao, input_html: { class: 'observacao_input' }, :label => "Observação:" %>
@@ -84,10 +85,9 @@
 	  </div>
 	</div>
 		<div class="form-actions">
-			
+			<%= link_to "Imprimir", {:controller => "ordems", :action => "versao_cliente", :id => @ordem.id}, {:target=> "_blank", :class=>"btn btn-primary"}%>
 			<%= f.button :submit, "Incluir Serviço", class: 'btn-primary right' %>
 			<%= link_to 'Voltar', ordems_path, class: 'btn' %>
 		</div>
-		<%= link_to "Imprimir", :controller => "ordems", :action => "versao_cliente", :id => @ordem.id, :target=> "_blank"%>
 
 	<% end %>
