--- a/app/views/servicos/_form.html.erb
+++ b/app/views/servicos/_form.html.erb
@@ -1,16 +1,28 @@
 <%= simple_form_for(@servico) do |f| %>
-  <%= f.error_notification %>
+<div class="inner_content">
+	  <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.association :produto %>
-    <%= f.association :papel %>
-    <%= f.association :maquina %>
-    <%= f.input :observacao %>
-    <%= f.input :valor, :as => :string %>
-    <%= f.association :ordem %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+	  <div class="form-inputs">
+		<div class="row">
+			<div class="span3" >
+				<%= f.association :produto, prompt: "Escolha o produto", :label => "Produto:", input_html: { class: 'ordem_input' }  %>
+				<%= f.association :papel, label_method: :tipo, value_method: :id, prompt: "Escolha o papel", :label => "Papel:", input_html: { class: 'ordem_input' } %>
+				<%= f.input :quantidade, :as => :string, :label => "Quantidade:", input_html: { class: 'ordem_input' } %>		
+			</div>
+			<div class="span3" >
+				<%= f.association :maquina, label_method: :tipo, value_method: :id, prompt: "Escolha a máquina", :label => "Máquina:", input_html: { class: 'ordem_input' } %>
+				<%= f.input :valor, :as => :string, :label => "Valor (R$):", input_html: { class: 'ordem_input' } %>		
+				
+			</div>
+			<div class="span3" >
+			<%= f.input :observacao, input_html: { class: 'observacao_input' }, :label => "Observação:" %>
+			</div>
+		</div>
+	  </div>
+</div>
+		<div class="form-actions">
+			<%= f.button :submit, "Incluir Serviço", class: 'btn-primary right' %>
+			<%= link_to 'Voltar', ordems_path, class: 'btn' %>
+		</div>
 <% end %>
+
