--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,6 +22,7 @@
   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
   -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
   box-shadow: 0 1px 2px rgba(0,0,0,.15);
+  margin-bottom: 20px;
 }
 
 .inner_content{
@@ -69,4 +70,15 @@
 .page-header.secondary{
 	margin: 20px 0 20px !important;
 	font-size: 22px !important; 
+}
+
+.inner_content.sign_in{float: none; margin: 0 auto;}
+
+.sign_in .control-group.boolean {
+	float: left;
+}
+
+.esqueci_senha {
+	margin-left: 25px;
+	line-height: 21px;
 }
