--- a/app/assets/stylesheets/ordems.css.scss
+++ b/app/assets/stylesheets/ordems.css.scss
@@ -15,4 +15,4 @@
 	box-sizing: border-box;         /* Opera/IE 8+ */	
 	}
 
-.order_menu .btn {font-weight:normal;padding: 5px 15px; margin-left: 20px;}
+.order_menu .alterar {font-weight:normal;padding: 5px 15px; margin-left: 20px;}
