--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -8,11 +8,11 @@
     <th>Rg</th>
     <th>Nascimento</th>
     <th>Telefone1</th>
-    <th>Telefone2</th>
     <th>Celular</th>
+    <th>Celular 2</th>
     <th>Endereco</th>
-    <th>Email</th>
-    <th>Status</th>
+    <th>Email Pessoal</th>
+    <th>Email Empresa</th>
     <th></th>
     <th></th>
     <th></th>
@@ -24,12 +24,12 @@
 		<td><%= cliente.name %></td>
 		<td><%= cliente.rg %></td>
 		<td><%= cliente.nascimento %></td>
-		<td><%= cliente.telefone1 %></td>
-		<td><%= cliente.telefone2 %></td>
+		<td><%= cliente.telefone %></td>
 		<td><%= cliente.celular %></td>
+		<td><%= cliente.celular2 %></td>
 		<td><%= cliente.endereco %></td>
-		<td><%= cliente.email %></td>
-		<td><%= cliente.status %></td>
+		<td><%= cliente.email_pessoal %></td>
+		<td><%= cliente.email_empresa %></td>
 		<td><%= link_to 'Mostar', cliente %></td>
 		<td><%= link_to 'Editar', edit_cliente_path(cliente) %></td>
 		<td><%= link_to 'Deletar', cliente, method: :delete, data: { confirm: 'Are you sure?' } %></td>
