--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 							<div class="row-fluid">
 								<ul class="nav nav-list">
 									<li class="nav-header">MENU</li>
-									<li><a href="/ordems/new">Ordem de Serviço</a></li>
+									<li><a href="/ordems">Ordem de Serviço</a></li>
 									<li><a href="/produtos">Produto</a></li>
 									<li><a href="/clientes">Cliente</a></li>
 									<li><a href="/papels">Papel</a></li>
