--- a/app/views/ordems/show.html.erb
+++ b/app/views/ordems/show.html.erb
@@ -4,7 +4,8 @@
 		<div class="right order_menu">
 			ID:
 			<%= @ordem.id %>
-			<%= link_to 'Alterar Ordem', edit_ordem_path(@ordem), class: 'btn btn-primary' %>
+			<%= link_to 'Alterar Ordem', edit_ordem_path(@ordem), class: 'btn btn-primary alterar' %>
+			<%= link_to raw("<i class='icon-print'></i>"), {:controller => "ordems", :action => "versao_cliente", :id => @ordem.id}, {:target=> "_blank", :class=>"btn"}%>
 		</div>
 	</h2>
 
@@ -39,6 +40,7 @@
 		<th>Produto</th>
 		<th>Papel</th>
 		<th>Maquina</th>
+		<th>Quantidade</th>
 		<th>Observacao</th>
 		<th>Valor</th>
 		<th class="edit_column"></th>
@@ -51,10 +53,11 @@
 		<td><%= servico.produto.name %></td>
 		<td><%= servico.papel.tipo %></td>
 		<td><%= servico.maquina.tipo %></td>
+		<td><%= servico.quantidade	 %></td>
 		<td><%= servico.observacao %></td>
 		<td>R$ <%= servico.valor %></td>
 		<td class="edit_column"><%= link_to 'Editar', edit_servico_path(servico), :class => "btn btn-primary" %></td>
-		<td class="remove_column"><%= link_to 'X', servico, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn" %></td>
+		<td class="remove_column"><%= link_to 'X', servico, method: :delete, data: { confirm: 'Remover serviço?' }, :class => "btn" %></td>
 	  </tr>
 	<% end %>
 	  </tbody>  
@@ -85,7 +88,6 @@
 	  </div>
 	</div>
 		<div class="form-actions">
-			<%= link_to "Imprimir", {:controller => "ordems", :action => "versao_cliente", :id => @ordem.id}, {:target=> "_blank", :class=>"btn btn-primary"}%>
 			<%= f.button :submit, "Incluir Serviço", class: 'btn-primary right' %>
 			<%= link_to 'Voltar', ordems_path, class: 'btn' %>
 		</div>
