--- a/app/views/servicos/edit.html.erb
+++ b/app/views/servicos/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editando Serviço</h1>
-
+<div class="inner_content"><h1>Editando Serviço</h1>
+</div>
 <%= render 'form' %>
-
-<%= link_to 'Exibir', @servico %> |
-<%= link_to 'Voltar', servicos_path %>
