Some of the invoices is done

--- a/app/views/ordems/edit.html.erb
+++ b/app/views/ordems/edit.html.erb
@@ -1,6 +1,4 @@
+<div class="inner_content">
 <h1>Editando Ordem de Serviço</h1>
-
+</div>
 <%= render 'form' %>
-
-<%= link_to 'Mostrar', @ordem %> |
-<%= link_to 'Voltar', ordems_path %>
