--- a/app/views/ordems/versao_cliente.html.erb
+++ b/app/views/ordems/versao_cliente.html.erb
@@ -1,3 +1,163 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Ordem de Serviço</title>
+<%= stylesheet_link_tag "invoice" %>
+</head>
+
+<body>
+<!-- start wrap -->
+<div id="wrap">
+	<!-- start wrap_mid -->
+	<div id="wrap_mid">
+    	<div id="wrap_top">
+        	<div id="wrap_bottom">
+            	<!-- start box -->
+            	<div id="box">
+                	<!-- start header -->
+                	<div id="header">
+                		<!-- start logo -->
+                		<div id="logo">
+                    		<a href="index.html" title="invoice"><img src="/assets/logo.gif" alt="logo" /></a>
+                    	</div>
+                    	<!-- end logo -->
+                    </div>
+                    <!-- end header -->
+                    <div id="container">
+                    	<!-- start Bill From -->
+                    	<div id="BillFrom">
+                    		<h2>Your Company Name</h2>
+                        	<span>Your Address Line 1</span>
+                        	<span>Address Line 2</span>
+                        	<span>Town</span>
+                        	<span>Region/State</span>
+                        	<span>Zip/Postal Code</span>
+                        	<span class="number">Mobile Phone: +4530422244</span>
+                        	<span class="black">Send To: <a href="#">client@company.com</a></span>
+                        	<span>Payment due by 15/09/2011</span>
+                    	</div>
+                    	<!-- end Bill From -->
+                    	<!-- start Bill To -->
+                    	<div id="BillTo">
+                   		 	<div class="row">
+                    			<h2>Bill To:</h2>
+                        		<span>Your Client Company Name Recipient Address Line 1 Address Line 2<br />Town<br />Region/State<br />Zip/Postal Code</span>
+                        	</div>
+                        	<div class="row"><strong>Invoice:</strong><span>00001</span></div>
+                        	<div class="row"><strong>Date:</strong><span>02/09/2011</span></div>
+                        	<div class="row"><strong>Amount:</strong><span>$00.00</span></div>
+                    	</div>
+                    	<!-- end Bill To -->
+                    	<div class="clear"></div>
+                    	<!-- start table -->
+                    	<div class="table">
+                    		<!-- start table_mid -->
+                    		<div class="table_mid">
+                        		<div class="table_top">
+                            		<div class="table_bottom">
+                                		<div class="t1 th">Product/Service</div>
+                                    	<div class="t2 th">Description</div>
+                                    	<div class="t3 th">Unit Price</div>
+                                    	<div class="t4 th">Quantity</div>
+                                    	<div class="t5 th">Discount</div>
+                                    	<div class="t6 th">Amount</div>
+                                    	<div class="even">
+                                    		<div class="t1 td">Design</div>
+                                        	<div class="t2 td">Corporate website design</div>
+                                        	<div class="t3 td">$00.00</div>
+                                        	<div class="t4 td">1</div>
+                                        	<div class="t5 td">0.00</div>
+                                        	<div class="t6 td">$00.00</div>
+                                    	</div>
+                                    	<div class="odd">
+                                    		<div class="t1 td">Design</div>
+                                        	<div class="t2 td">Corporate website design</div>
+                                        	<div class="t3 td">$00.00</div>
+                                        	<div class="t4 td">1</div>
+                                        	<div class="t5 td">0.00</div>
+                                        	<div class="t6 td">$00.00</div>
+                                    	</div>
+                                    	<div class="even">
+                                    		<div class="t1 td">Design</div>
+                                        	<div class="t2 td">Corporate website design</div>
+                                        	<div class="t3 td">$00.00</div>
+                                        	<div class="t4 td">1</div>
+                                        	<div class="t5 td">0.00</div>
+                                        	<div class="t6 td">$00.00</div>
+                                    	</div>
+                                    	<div class="odd">
+                                    		<div class="t1 td">Design</div>
+                                        	<div class="t2 td">Corporate website design</div>
+                                        	<div class="t3 td">$00.00</div>
+                                        	<div class="t4 td">1</div>
+                                        	<div class="t5 td">0.00</div>
+                                        	<div class="t6 td">$00.00</div>
+                                    	</div>
+                                    	<div class="even last">
+                                    		<div class="t1 td">Design</div>
+                                        	<div class="t2 td">Corporate website design</div>
+                                        	<div class="t3 td">$00.00</div>
+                                        	<div class="t4 td">1</div>
+                                        	<div class="t5 td">0.00</div>
+                                        	<div class="t6 td">$00.00</div>
+                                    	</div>
+                                	</div>
+                            	</div>
+                        	</div>
+                        	<!-- end table_mid -->
+                        	<div class="clear"></div>
+                    	</div>
+                    	<!-- end table -->
+                        <!-- start description -->
+                        <div class="description">
+                        	<p>Here is the description about provided services and negotiated working conditions. Here is the description about provided services and negotiated working conditions. Here is the description about provided services and negotiated working conditions. Here is the description about provided services and negotiated working conditions. </p>
+                        </div>
+                        <!-- end deatil -->
+                        <!-- start amount -->
+                        <div id="total">
+                        	<span>Amount Due</span>
+                            <strong>$00.00</strong>
+                        </div>
+                        <!-- end amount -->
+                        <div class="clear"></div>
+                    </div>
+                    <!-- end container -->
+                    <div class="clear"></div>
+                    <!-- start footer -->
+                    <div id="footer">
+                    	<!-- start footnote -->
+                    	<div id="footnote">Thank you very much for choosing us. It was pleasure to work with you.</div>
+                      
+                        <!-- end credits -->
+                        <div class="clear"></div>
+                    </div>
+                    <!-- end footer -->
+                    <div class="clear"></div>
+      			</div>
+                <!-- end box -->
+            </div>
+        </div>
+    </div>
+    <!-- end wrap_mid -->
+    <div class="clear"></div>
+</div>
+<!-- end wrap -->
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
 <%= stylesheet_link_tag "application", :media => "all" %>
 
 <h1>Ordem de Serviço</h1>
