--- a/app/assets/stylesheets/invoice.css.scss
+++ b/app/assets/stylesheets/invoice.css.scss
@@ -32,11 +32,11 @@ h6{font-size:1.4em;}
 
 /* LAYOUT TAGS ----------------------- */
 
-body{background:url(/assets/bg_body.jpg) repeat center top;font-family:Arial, Helvetica, sans-serif;color:#515151;font-size:14px;}
+body{background-color:#eee!important;font-family:Arial, Helvetica, sans-serif;color:#515151;font-size:14px;}
 #wrap{width:998px;margin:0 auto;padding:50px 0;}
-#wrap_top{background:url(/assets/bg_wrap_top.png) no-repeat left top;width:100%;float:left;}
-#wrap_mid{background:url(/assets/bg_wrap_bottom.png) no-repeat left bottom;width:100%;float:left;}
-#wrap_bottom{background:url(/assets/bg_wrap_mid.png) repeat-y center top;width:960px;margin:19px 0;padding:0 21px 0 17px;display:inline;float:left;}
+#wrap_top{border: 1px solid #ccc;background: white;box-shadow: 0px 0px 20px #aaa;width:100%;float:left;}
+#wrap_mid{width:100%;float:left;}
+#wrap_bottom{width:960px;margin:19px 0;padding:0 21px 0 17px;display:inline;float:left;}
 
 #box{width:862px;margin:0 auto;}
 #box h2{font-size:14px;}
